--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 	      </div>
         </div>
 	<div class="card">
-              <div class="card-image-wrapper">                                                                <img src="img/me.jpg" alt="Graphics Designer">
+              <div class="card-image-wrapper">                                                                <img src="img/ano.jpg" alt="Graphics Designer">
 		      </div>
 		      <div class="card-info">
 			      <h2>Chemiosis Daniel</h2>
